--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -1,13 +1,19 @@
-<h4 class="text-center">Login</h4>
+<h4 class="text-center mt-2">Login</h4>
 
-<form class="form mt-4" (ngSubmit)="login()">
-  <div class="form-group">
+<form class="form mt-4" (ngSubmit)="login()" #loginForm="ngForm">
+  <div class="form-group mb-2">
     <input
       class="form-control"
       placeholder="Nome"
       [(ngModel)]="usuario"
       name="usuario"
+      #campoUsuario="ngModel"
+      required="true"
     />
+    <app-mensagem
+      *ngIf="campoUsuario.invalid && campoUsuario.touched"
+      mensagem="Usuário obrigatório"
+    ></app-mensagem>
   </div>
 
   <div class="form-group">
@@ -17,8 +23,20 @@
       placeholder="Senha"
       [(ngModel)]="senha"
       name="senha"
+      #campoSenha="ngModel"
+      required="true"
     />
+    <app-mensagem
+      *ngIf="campoSenha.invalid && campoSenha.touched"
+      mensagem="Senha obrigatória"
+    ></app-mensagem>
   </div>
 
-  <button type="submit" class="btn btn-primary btn-block">Login</button>
+  <button
+    type="submit"
+    class="btn btn-primary col-12 mt-2"
+    [disabled]="loginForm.invalid"
+  >
+    Login
+  </button>
 </form>
