routerLink implementado na tela home

--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -1,4 +1,4 @@
-<h4 class="text-center">Registre-see mostre o seu pet ao mundo!</h4>
+<h4 class="text-center">Registre-se e mostre o seu pet ao mundo!</h4>
 
 <form class="form mt-4">
   <div class="form-group mb-2">
@@ -15,3 +15,4 @@
   </div>
   <button type="submit" class="btn btn-primary col-12 mt-2">Cadastro</button>
 </form>
+<p>Já é um usuário? <a [routerLink]="['']">Faça login</a></p>
