--- a/src/app/home/login/login.component.html
+++ b/src/app/home/login/login.component.html
@@ -40,3 +40,7 @@
     Login
   </button>
 </form>
+
+<p class="text-center">
+  Não é usuário? <a [routerLink]="['novousuario']">Se cadastre</a>
+</p>
