--- a/src/app/home/novo-usuario/novo-usuario.component.html
+++ b/src/app/home/novo-usuario/novo-usuario.component.html
@@ -1,17 +1,30 @@
 <h4 class="text-center">Registre-se e mostre o seu pet ao mundo!</h4>
 
-<form class="form mt-4">
+<form class="form mt-4" [formGroup]="novoUsuarioForm" (submit)="cadastrar()">
   <div class="form-group mb-2">
-    <input class="form-control" placeholder="E-mail" />
+    <input class="form-control" placeholder="E-mail" formControlName="email" />
   </div>
   <div class="form-group mb-2">
-    <input class="form-control" placeholder="Nome Completo" />
+    <input
+      class="form-control"
+      placeholder="Nome Completo"
+      formControlName="fullName"
+    />
   </div>
   <div class="form-group mb-2">
-    <input class="form-control" placeholder="Usuário" />
+    <input
+      class="form-control"
+      placeholder="Usuário"
+      formControlName="userName"
+    />
   </div>
   <div class="form-group mb-2">
-    <input class="form-control" placeholder="Senha" type="password" />
+    <input
+      class="form-control"
+      placeholder="Senha"
+      type="password"
+      formControlName="password"
+    />
   </div>
   <button type="submit" class="btn btn-primary col-12 mt-2">Cadastro</button>
 </form>
