--- a/src/app/componentes/cabecalho/cabecalho.component.html
+++ b/src/app/componentes/cabecalho/cabecalho.component.html
@@ -2,9 +2,9 @@
   <nav class="navbar navbar-light bg-white">
     <a class="navbar-brand p-2">Gatito Book</a>
     <div *ngIf="user$ | async as user">
-      <div *ngIf="user.name; else login">
-        <i class="fa fa-user-circle mr-1"></i>
-        <a class="mr-1">{{ user.name }}</a>
+      <div *ngIf="user.name; else login" class="container">
+        <i class="fa fa-user-circle"></i>
+        <a class="m-1">{{ user.name }}</a>
         <a (click)="logout()">Logout</a>
       </div>
     </div>
