--- a/src/app/animais/animal/animal.component.html
+++ b/src/app/animais/animal/animal.component.html
@@ -1,1 +1,6 @@
-<img [routerLink]="url" [alt]="descricao" class="img-thumbnail" />
+<img
+  [routerLink]="url"
+  [alt]="descricao"
+  src="{{ url }}"
+  class="img-thumbnail"
+/>
