--- a/src/app/animais/animal/animal.component.html
+++ b/src/app/animais/animal/animal.component.html
@@ -1,6 +1,1 @@
-<img
-  [routerLink]="url"
-  [alt]="descricao"
-  src="{{ url }}"
-  class="img-thumbnail"
-/>
+<img [src]="url" [alt]="descricao" class="img-thumbnail" />
